Bug Squashing On Custom Armor Kits

--- a/client/src/Routes/ArmoryRow.css
+++ b/client/src/Routes/ArmoryRow.css
@@ -163,6 +163,7 @@
 }
 
 .container-cores, .container-cores-custom-kits {
+  padding-top:50px;
   flex: 1; /* Takes up remaining space */
   transition: flex 0.3s ease; /* Smooth transition for resizing */
 }
